@startuml

title Pigeon-swarm - Notifications Context

package "notifications" {
  package "domain" {
    class Notification <AggregateRoot> {
      -id: NotificationId
      -type: NotificationType
      -recipientIdentityId: IdentityId
      -status: NotificationStatus
      -state: NotificationState
      -payload: ConversationInvitationPayload | CommunityInvitationPayload | MissedCallPayload
      -createdAt: Timestamp
      +accept(): void
      +decline(): void
      +isRecipient(identityId: IdentityId): boolean
      +toPrimitives(): object
    }

    note right of Notification
      status: unread | read
      state: pending | accepted | declined
      Missed call notifications are created by the
      call timeout scheduler.
    end note

    class ConversationInvitationPayload {
      -conversationId: ConversationId
      -inviterIdentityId: IdentityId
      -recipientIdentityId: IdentityId
      -encryptedConversationKey: EncryptedConversationKey
      -inviterSignature: Signature
      +toPrimitives(): object
    }

    class CommunityInvitationPayload {
      -communityId: CommunityId
      -inviterIdentityId: IdentityId
      -recipientIdentityId: IdentityId
      -encryptedCommunityKey: EncryptedCommunityKey
      -inviterSignature: Signature
      +toPrimitives(): object
    }

    class MissedCallPayload {
      -callId: MissedCallId
      -callerIdentityId: IdentityId
      -networkId: NetworkId
      -recipientIdentityId: IdentityId
      +toPrimitives(): object
    }

    note right of ConversationInvitationPayload
      Encrypted conversation key is opaque.
      Backend never decrypts private keys
      or conversation keys.
    end note

    class NotificationRepository <interface> {
      +findById(notificationId: NotificationId): Promise<Notification?>
      +findByRecipient(recipientIdentityId: IdentityId, limit: number, beforeNotificationId?: NotificationId): Promise<Notification[]>
      +save(notification: Notification): Promise<void>
    }

    Notification *--> ConversationInvitationPayload
    Notification *--> CommunityInvitationPayload
    Notification *--> MissedCallPayload
    NotificationRepository o--> Notification
  }

  package "application" {
    class NotificationCreator {
      -repository: NotificationRepository
      +create(message: NotificationCreateMessage): Promise<Notification>
    }

    class NotificationsFinder {
      -repository: NotificationRepository
      +find(message: NotificationsFindMessage): Promise<Notification[]>
    }

    class NotificationUpdater {
      -repository: NotificationRepository
      +update(message: NotificationUpdateMessage): Promise<Notification>
    }

    NotificationCreator --> NotificationRepository
    NotificationsFinder --> NotificationRepository
    NotificationUpdater --> NotificationRepository
  }

  package "infrastructure" {
    class OrbitDBNotificationRepository {
      +findById(notificationId: NotificationId): Promise<Notification?>
      +findByRecipient(recipientIdentityId: IdentityId, limit: number, beforeNotificationId?: NotificationId): Promise<Notification[]>
      +save(notification: Notification): Promise<void>
    }

    OrbitDBNotificationRepository ..|> NotificationRepository
  }
}

@enduml
